@@ -1,5 +1,5 @@
 /*
-  Copyright 2010-2022 BusinessCode GmbH, Germany
+  Copyright 2010-2023 BusinessCode GmbH, Germany
 
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
@@ -77,6 +77,7 @@
       var extendedConfig=null;
       var config = {
           values: this.options.values || "1|0",
+          isSwitch: this.options.isSwitch || false,
           checkValue: (this.options.values || "1|0").split("|")[0],
           uncheckValue: (this.options.values || "1|0").split("|")[1],
           target: bcdui.factory._extractXPathAndModelId(this.options.targetModelXPath),
@@ -187,7 +188,7 @@
      */
     _createInputControl: function(){
 
-      var el = jQuery("<input></input>"); // do not attach .form-check-input since our parent must be .form-check which we cant force here
+      var el = jQuery("<input class='bcdCheckbox'></input>"); // do not attach .form-check-input since our parent must be .form-check which we cant force here
 
       var opts = this.options;
       el.attr("id","inputchk_" + opts.id);
@@ -195,6 +196,8 @@
       el.attr("autofocus", opts.autofocus);
       el.attr("readonly", opts.readonly);
       el.attr("type", "checkbox");
+      if (opts.isSwitch)
+        el.addClass("bcdSwitch");
 
       // bind native html events if provided; defined by hasHtmlEvents API
       this._mapNativeHtmlEvents(el);
