@@ -28,6 +28,7 @@ ___
 
 .Client:
 * checkbox widget supports more than 1 and 0 via values parameter
+* checkbox widget has a isSwitch parameter for a horizontal slider switch
 * label widget added
 * chips widget added
 * cube/cubeModel parameter requestChain added to allow custom request builders
